Implemented namespace feature
